mejoras en responsive modal

--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -164,4 +164,9 @@
      .about__cards .about__card{
       padding: 0.8rem;
     }
+
+    .about__contenido{
+      padding: 0rem 0rem;  
+   }
+   
 }
