--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,6 @@
   pointer-events: none;
 }
 
-
 .App-header {
   background-color: var(--color-bg);
   min-height: 100vh;
@@ -19,9 +18,11 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: var(--color-primary);
   position:relative;
-  line-height:1.6em;}
+  line-height:1.6em;
+}
+
 
 .App-link {
   color: #61dafb;
