--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -63,6 +63,24 @@ header h1{
   left: 5%;
 }
 
+@media screen and (max-width: 640px) {
+  .perfil-img img{ 
+  
+    width: 12em;
+    left: calc(50% - 9rem);
+    margin-top: 6rem;
+    border-radius: 50%;
+    overflow: hidden;
+    background-image: cover;
+    transition: var(--transition);
+    position: absolute;
+    animation: float 6s ease-in-out infinite;
+    top: -52px;
+    transform: translateY(200px);
+    left: 0%;
+  }
+}
+
 @keyframes fade-in {
   to {
     transform: translate(0);
@@ -117,7 +135,7 @@ header h1{
   cursor: pointer;
 }
 
-/* .perfil-img .hover-show:active {
+/* .perfil-img .hover-show:hover {
   animation: showspin 5s linear  infinite;
 } */
 
@@ -151,7 +169,7 @@ header h1{
 position: relative;
 }
 
-.perfil-img .hover-show:active .circle {
+.perfil-img .hover-show:hover .circle {
   opacity: 1;
   background: linear-gradient(
     45deg,
@@ -163,7 +181,7 @@ position: relative;
   
 }
 
-.perfil-img .hover-show:active .circle:nth-child(1) {
+.perfil-img .hover-show:hover .circle:nth-child(1) {
   background: url("../../assets/tecnologi/react_gris.svg");
   background-size: contain;
   background-position: center;
@@ -172,7 +190,7 @@ position: relative;
   transform: translateX(-150%) translateY(-150%);
 
 }
-.perfil-img .hover-show:active .circle:nth-child(2) {
+.perfil-img .hover-show:hover .circle:nth-child(2) {
   position: absolute;
   transform: translateX(150%) translateY(-150%);
   background: url(../../assets/tecnologi/Vue.js-Logo.wine.svg);
@@ -180,7 +198,7 @@ position: relative;
   background-repeat: no-repeat;
   background-position: center;
 }
-.perfil-img .hover-show:active  .circle:nth-child(3) {
+.perfil-img .hover-show:hover  .circle:nth-child(3) {
   position: absolute;
   background: url(../../assets/tecnologi/js.svg);
   transform: translateX(250%);
@@ -188,7 +206,7 @@ position: relative;
     background-repeat: no-repeat;
   background-position: center;
 }
-.perfil-img  .hover-show:active .circle:nth-child(4) {
+.perfil-img  .hover-show:hover .circle:nth-child(4) {
   position: absolute;
   transform: translateX(170%) translateY(180%);
   background: url(../../assets/tecnologi/vuetify.svg);
@@ -196,7 +214,7 @@ position: relative;
   background-repeat: no-repeat;
   background-position: center;
 }
-.perfil-img .hover-show:active .circle:nth-child(5) {
+.perfil-img .hover-show:hover .circle:nth-child(5) {
   position: absolute;
   transform: translateX(-30%) translateY(220%);
   background: url(../../assets/tecnologi/sass-1.svg);
@@ -204,7 +222,7 @@ position: relative;
   background-repeat: no-repeat;
   background-position: center;
 }
-.perfil-img .hover-show:active .circle:nth-child(6) {
+.perfil-img .hover-show:hover .circle:nth-child(6) {
   position: absolute;
   transform: translateX(-210%) translateY(150%);
   background: url(../../assets/tecnologi/GitHub-Logo.wine.svg);
@@ -212,7 +230,7 @@ position: relative;
   background-repeat: no-repeat;
   background-position: center;
 }
-.perfil-img  .hover-show:active .circle:nth-child(7) {
+.perfil-img  .hover-show:hover .circle:nth-child(7) {
   position: absolute;
   transform: translateX(-210%);
   background: url(../../assets/tecnologi/javascript-seeklogocom.svg);
@@ -264,7 +282,7 @@ position: relative;
     animation: float 6s ease-in-out infinite;
     top: -50px;
     transform: translateY(200px);
-   
+    left: 0%;
   }
   
 }
