--- a/src/components/portfolio/css/modal.css
+++ b/src/components/portfolio/css/modal.css
@@ -209,7 +209,8 @@ border-radius: 1rem;
 
 @media screen and (max-width: 640px) {
   .container__subTexto {
-    flex-wrap: wrap-reverse;
+    flex-wrap: wrap;
+    padding: 2rem 0rem 2rem 0rem;
   }
 
   .contenido__info__proyecto {
