--- a/src/components/portfolio/css/modal.css
+++ b/src/components/portfolio/css/modal.css
@@ -184,7 +184,7 @@ border-radius: 1rem;
 
 .logos__tecnologias--modal {
   display: grid;
-  grid-template-columns: repeat(6, 10%);
+  grid-template-columns: repeat(7, 10%);
   justify-content: center;
   align-items: center;
   padding: 1rem 0rem 1rem 0.5rem;
@@ -209,7 +209,7 @@ border-radius: 1rem;
 
 @media screen and (max-width: 640px) {
   .container__subTexto {
-    flex-wrap: wrap;
+    flex-wrap: wrap-reverse;
     padding: 2rem 0rem 2rem 0rem;
   }
 
