--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
+  scroll-behavior: smooth;
 }
 
 :root {
@@ -112,17 +113,6 @@ a:hover {
     width: var(--container-width-sm);
     margin: 0 auto;
   }
-
-  /* .name-main {
-    
-    font-family: "Dinamit-light";
-    font-size: 2.4rem;
-    height: max-content;
-
-    color: var(--texto-pink);
-    transition: var(--transition);
-    position: relative;
-  } */
 }
 
 ::-webkit-scrollbar {
