--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -14,6 +14,10 @@ header h1{
   margin: 1rem 1rem 0.5rem 1rem;
 }
 
+.subTitulo{
+  transform-origin: top center;
+  transform-box: fill-box;
+}
 .btn:hover{
   border: 2px dashed var(--color-primary);
 }
